--- a/BreastCancerprediction.ipynb
+++ b/BreastCancerprediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdkCFntcBcBQIM1nqCXre9",
+      "authorship_tag": "ABX9TyMf9dcWKy6ISJXpAyzAL2GC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -463,6 +463,7 @@
         }
       ],
       "source": [
+        "#importing packages\n",
         "import pandas as pd\n",
         "data=pd.read_csv(\"/content/breast-cancer.csv\")\n",
         "data.head()\n"
@@ -1114,6 +1115,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# deleting the id column\n",
         "del data['id']\n",
         "data.shape"
       ],
@@ -1755,6 +1757,45 @@
     {
       "cell_type": "code",
       "source": [
+        "data.diagnosis.value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0mYQHHcgpAoJ",
+        "outputId": "5217b113-cfaa-485e-aba5-8bec8e16bc99"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "B    357\n",
+              "M    212\n",
+              "Name: diagnosis, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here M-Maligant (cancerous) &\n",
+        "         B-Benign (non-cancerous)"
+      ],
+      "metadata": {
+        "id": "WBkTw93bpMIC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# seperating and initializing target column and features\n",
         "x=data.loc[:,data.columns[1:]]\n",
         "y=data[\"diagnosis\"]\n",
         "y=y.map({\"M\": 1,\"B\":0})"
@@ -1768,6 +1809,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# splitting and here 80% of my data goes to training and 20% to testing\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.2)"
@@ -1781,6 +1823,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# for Decion tree scaling is not mandatory but its good to scale\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "slr=StandardScaler()\n",
         "x_train=slr.fit_transform(x_train)\n",
@@ -1795,6 +1838,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# model intializing and predictions\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "dt=DecisionTreeClassifier()\n",
         "dt.fit(x_train,y_train)\n",
@@ -1830,6 +1874,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Eva.metrics\n",
         "from sklearn.metrics import accuracy_score,RocCurveDisplay\n",
         "\n",
         "RocCurveDisplay.from_estimator(dt,x_test,y_test)\n",
@@ -1869,8 +1914,26 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "94PgkNqfqcsi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "source": [
-        "\n",
+        "Detecting best value of hyper parameter using hit&trail, cross validation method and in this we can see the models overfitting and underfitting occurs"
+      ],
+      "metadata": {
+        "id": "eX_BLsTSqPq0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Hit & trail,cross validation\n",
         "from sklearn.model_selection import cross_val_score\n",
         "import numpy as np\n",
         "\n",
@@ -1920,7 +1983,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "depth=5 is best hyper parameter"
+        "depth=5 is best hyper parameter and which has the highest cross validation score"
       ],
       "metadata": {
         "id": "-jdJYxDhncuT"
@@ -1929,6 +1992,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# deploying the model by giving the best hyper parameter which we finded using cross validation method and checking for  accuracy score and AUROC scores\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "dt=DecisionTreeClassifier(max_depth=5)\n",
         "dt.fit(x_train,y_train)\n",
